fix responsive problem on mobile

--- a/style.css
+++ b/style.css
@@ -115,7 +115,10 @@ footer {
 
 /* PHONE-SCREEN */
 
-@media (max-width: 690px) {
+@media all and (max-width: 700px)
+{
+    /* Rédigez vos propriétés CSS ici */
+
 	.main {	
 		margin: 0px;
 	}
@@ -124,8 +127,13 @@ footer {
 		padding: 25px 0px 25px 0px ;
 	}
 	header > h1 {
-		line-height: 145px;
+		line-height: normal;
 		font-size: 50px;
+		padding-bottom: 20px;
+	}
+	header > p {
+		line-height: normal;
+		font-size: 30px;
 	}
 	.image {
 		width: 93%;
@@ -145,12 +153,13 @@ footer {
 	.list {
 		align-items:flex-start ;
 		width: 100%;
-		padding-left: 25px;
+		padding-left: 0px;
 	}
 	.list li {
 		width: 80%;
 	}
 	.moreInfo {
 		padding: 0px 10px;
+		text-align: center;
 	}
 }
